--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.4",
+    "asyncpg>=0.30.0",
     "faker>=37.4.0",
     "fastapi[standard]>=0.116.0",
     "passlib[bcrypt]>=1.7.4",
